tests/ui/rust-2024/unsafe-extern-blocks/safe-unsafe-on-unadorned-extern-block.edition2024.stderr
error: extern blocks must be unsafe
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:5:1
   |
LL | / extern "C" {
LL | |
LL | |     safe static TEST1: i32;
...  |
LL | | }
   | |_^

error: items in `extern` blocks without an `unsafe` qualifier cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:7:5
   |
LL |     safe static TEST1: i32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add `unsafe` to this `extern` block
   |
LL | unsafe extern "C" {
   | ++++++

error: items in `extern` blocks without an `unsafe` qualifier cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:9:5
   |
LL |     safe fn test1(i: i32);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
help: add `unsafe` to this `extern` block
   |
LL | unsafe extern "C" {
   | ++++++

error: aborting due to 3 previous errors

